--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"> #TONYHAWKMADDENGOLDENEYE69420</a>
+									<a href="index.html" class="logo"><img height="35" src="images/PWN_icon.png" /></a>
 									<ul class="icons">
 										<li><a target="_blank" href="https://twitter.com/PWNSolana" class="icon"><img height="35" src="images/x_icon.png" /></a></li>
 										<li><a href="https://dexscreener.com/solana/huuabzfjgpddqgxlgbo4b83tgujnrapbqsar8awhpump" target="_blank" class="icon"><img height="30" src="images/ds_icon.png" /></a></li>
@@ -94,8 +94,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<video width="100%" style="
-    margin-top: 4.5em;" autoplay controls>
+										<video width="100%" style="margin-top: 4.5em;" autoplay controls>
 										<source src="/images/title.mp4" type="video/mp4">
 										</video>
 									</span>
@@ -126,42 +125,48 @@
 								<header class="major">
 									<h2>WTF is PWN?</h2>
 								</header>
-								<p>In the vibrant world of gaming, language evolves rapidly, often birthing new terms that encapsulate the spirit of competition, camaraderie, and sometimes, outright domination. Among these, "pwn" stands out as a testament to how a simple typo can redefine victory.
 
-									<br><br>The term "PWN" emerged from the early days of online gaming, with its roots in the late 1990s or early 2000s. It's widely believed that "pwn" was a typo for "own." The proximity of the keys 'o' and 'p' on a standard QWERTY keyboard inadvertently led to this misspelling, which gamers quickly adopted for its novelty and humor. The term first gained significant traction in games like Warcraft III (2002), where it was rumored that a map designer's typo changed "owned" to "pwned" when celebrating a victory. Urban Dictionary entries from as early as 2003 document this transition from "own" to "pwn," linking it directly to gaming culture.</p>
+								<p>Word is, this all kicked off when some mad-genius map designer in Warcraft III flubbed “owned” into “pwned” while flexing their win. And us retro gamer kids? We ate it up like it was the last slice of pizza at a sleepover. It wasn’t just a word—it was a vibe, a badge of honor, a sonic boom of domination. By 2003, the OGs were cementing it in Urban Dictionary, screaming to the world that “pwn” was our thing—born from the digital dungeons of gaming culture.
+									Back then, “pwn” wasn’t just about winning—it was about shredding noobs, clutch moments, and that sweet, sweet bragging rights over a laggy 56k connection. It’s the sound of a headshot in Quake, the roar of a Frost Wyrm stomping bases, the smirk you wore when you typed “pwned” in chat. For us retro warriors, it’s a time capsule—a throwback to when gaming was raw, wild, and oh-so-addictive. So here’s to “pwn,” the typo that became a battle cry. Long live the glory days!</p>
 
-								<div class="box alt">
-									<div class="row gtr-50 gtr-uniform">
-										<div class="col-2"><span class="image fit"><img src="images/FF.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/Contra.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/Megaman.gif" alt="" /></span></div>
-										<!-- Break -->
-										<div class="col-2"><span class="image fit"><img src="images/Spyro.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/Goldeneye.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/MetalSlug.gif" alt="" /></span></div>
-										<!-- Break -->
-										<div class="col-2"><span class="image fit"><img src="images/Pokemon.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/Street%20Fighter.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/Family.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/FIFA%2098.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/SSX.gif" alt="" /></span></div>
-										<div class="col-2"><span class="image fit"><img src="images/Aladdin.gif" alt="" /></span></div>
-									</div>
-								</div>
+								<iframe height="200px" width="300px" src="https://www.youtube.com/embed/Fhb89V43KWc?si=nr0PEnrq68nFXxel" ></iframe>
+
+
 
 							</section>
 
 
+<section>
 
+	<div class="box alt">
+		<div class="row gtr-50 gtr-uniform">
+
+
+			<div class="col-2"><span class="image fit"><img src="images/Megaman.gif" alt="" /></span></div>
+			<!-- Break -->
+			<div class="col-2"><span class="image fit"><img src="images/Spyro.gif" alt="" /></span></div>
+			<div class="col-2"><span class="image fit"><img src="images/Goldeneye.gif" alt="" /></span></div>
+			<div class="col-2"><span class="image fit"><img src="images/MetalSlug.gif" alt="" /></span></div>
+			<!-- Break -->
+			<div class="col-2"><span class="image fit"><img src="images/Pokemon.gif" alt="" /></span></div>
+			<div class="col-2"><span class="image fit"><img src="images/Street%20Fighter.gif" alt="" /></span></div>
+
+
+
+		</div>
+	</div>
+
+
+</section>
 
 							<section>
 								<header class="major">
 									<h2>📺 PWN TV</h2>
 								</header>
 
-								<p>Ready for a nostalgia overload? PWN TV is your portal back to the golden days — when Saturday mornings meant cartoons, gaming marathons ruled, and music actually rocked. The video collection below is packed with the best bits of the ’90s and early 2000s — iconic game footage, legendary TV moments, and vibes that hit you right in the feels.
+								<p>Scroll down, smash that play button, and dive headfirst into the era when “pwn” was king—when you’d frag your buddies in GoldenEye ‘til 3 a.m., then wake up to X-Men: The Animated Series with a bowl of Cap’n Crunch. PWN TV’s got the goods: pixelated perfection, cheesy commercials, and those unforgettable feels that only us retro gamer kids can truly get. This is our turf, our throwback kingdom—where every clip is a high score and every vibe is a total domination. Let’s PWN the past, fam!
 
-									Scroll down, press play, and relive the greatest era ever. Let’s PWN! 💥</p>
+								</p>
 								<div class="posts">
 
 									<article>
@@ -178,6 +183,7 @@
 										<h3>blockbuster_CAM_SHAKY_AS_HELL.avi.mp4</h3>
 
 									</article>
+
 									<article>
 										<a class="image"><video width="100%" controls>
 											<source src="/images/sunshine.mp4" type="video/mp4">
@@ -190,6 +196,20 @@
 											<source src="/images/higher_video.mp4" type="video/mp4">
 										</video></a>
 										<h3>can_you_take_me_higheeerr.mp4</h3>
+
+									</article>
+									<article>
+										<a class="image"><video width="100%" controls>
+											<source src="/images/jesus_walks_video.mp4" type="video/mp4">
+										</video></a>
+										<h3>kanye_when_he_was_normal.mp4</h3>
+
+									</article>
+									<article>
+										<a class="image"><video width="100%" controls>
+											<source src="/images/skrillex_video.mp4" type="video/mp4">
+										</video></a>
+										<h3>skrillex-bangarang.mov</h3>
 
 									</article>
 									<article>
@@ -213,27 +233,9 @@
 										<h3>wake_up_neo.mp4</h3>
 
 									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/bittersweet_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>not_porn.mp4</h3>
 
-									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/undertaker_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>that_badass_with_the_hat.mp4</h3>
 
-									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/dwts_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>dwts.mp4</h3>
 
-									</article>
 									<article>
 										<a class="image"><video width="100%" controls>
 											<source src="/images/my_way.mp4" type="video/mp4">
@@ -248,13 +250,7 @@
 										<h3>007.mp4</h3>
 
 									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/jesus_walks_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>kanye_when_he_was_normal.mp4</h3>
 
-									</article>
 									<article>
 										<a class="image"><video width="100%" controls>
 											<source src="/images/miketyson_video.mp4" type="video/mp4">
@@ -263,49 +259,10 @@
 
 									</article>
 
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/mk_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>finish_him</h3>
 
-									</article>
 
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/nookie_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>Nookie</h3>
 
-									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/prodigy_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>remember Prodigy?</h3>
 
-									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/pwneverything_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>PWN_everything.exe</h3>
-
-									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/sna_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>white_stripes-seven_nation_army</h3>
-
-									</article>
-									<article>
-										<a class="image"><video width="100%" controls>
-											<source src="/images/skrillex_video.mp4" type="video/mp4">
-										</video></a>
-										<h3>skrillex-bangarang.mov</h3>
-
-									</article>
 
 								</div>
 							</section>
@@ -314,10 +271,9 @@
 								<header class="major">
 									<h2>🕹️ PWN ARCADE</h2>
 								</header>
-								<p>Welcome to PWN ARCADE — Where Retro Lives On!
-									Step right up, gamers! PWN ARCADE is your ultimate throwback playground, packed with brand-new mini-games inspired by the golden age of gaming. Built with the help of Grok 3 (xAI), these games capture the vibe of classic arcades — think 8-bit adventures, pixel-perfect mayhem, and button-mashing glory.
+								<p>Plug In, Power Up, and PWN! Welcome to PWN ARCADE, the raddest retro rewind this side of the millennium! This ain’t just a gaming spot—it’s a neon-soaked, joystick-jamming shrine to the golden age, where we’ve cooked up a stash of fresh mini-games that’ll teleport you straight back to the ‘80s and ‘90s. Crafted with the brainpower of Grok 3 (xAI), these bad boys are dripping with 8-bit soul, pixel-punching chaos, and that sweet, sweet arcade grind. From chiptune beats to clutch high scores, we’re serving up the classics—reborn and ready to dominate. Dive in, mash those buttons, and stay sharp—more retro fire’s coming your way soon. Time to flex those skills and PWN like it’s 1999! Let’s roll!
 
-									Jump in, play hard, and keep an eye out — more epic games are dropping soon. Ready to get your game on? Let’s PWN! </p>
+								</p>
 								<div class="box alt">
 									<div class="row gtr-50 gtr-uniform">
 										<div class="col-3"><span class="image fit"><img src="images/pwnzer.gif" alt="" /></span></div>
@@ -350,11 +306,6 @@
 									</div>
 								</div>
 							</section>
-
-
-
-							<!-- Section -->
-
 
 						</div>
 					</div>
