--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 								</header>
 
 								<p>Word is, this all kicked off when some mad-genius map designer in Warcraft III flubbed “owned” into “pwned” while flexing their win. And us retro gamer kids? We ate it up like it was the last slice of pizza at a sleepover. It wasn’t just a word—it was a vibe, a badge of honor, a sonic boom of domination. By 2003, the OGs were cementing it in Urban Dictionary, screaming to the world that “pwn” was our thing—born from the digital dungeons of gaming culture.
-									Back then, “pwn” wasn’t just about winning—it was about shredding noobs, clutch moments, and that sweet, sweet bragging rights over a laggy 56k connection. It’s the sound of a headshot in Quake, the roar of a Frost Wyrm stomping bases, the smirk you wore when you typed “pwned” in chat. For us retro warriors, it’s a time capsule—a throwback to when gaming was raw, wild, and oh-so-addictive. So here’s to “pwn,” the typo that became a battle cry. Long live the glory days!</p>
+									</p>
 <div align="center">
 								<iframe  height="200px" width="300px" src="https://www.youtube.com/embed/Fhb89V43KWc?si=nr0PEnrq68nFXxel" ></iframe>
 </div>
@@ -296,7 +296,7 @@
 								</header>
 
 								<ul class="actions">
-									<li><a target="_blank" href="https://t.me/TonyHawkMaddenGoldenEye" class="button primary large ">Join the $PWN Telegram</a></li>
+									<li><a target="_blank" href="https://t.me/TonyHawkMaddenGoldenEye" class="button primary large ">Join our Telegram</a></li>
 								</ul>
 
 								<div class="box alt">
