--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Do you even PWN, bro?</h1>
+											<h1>DO YOU EVEN PWN, BRO?</h1>
 											<p>CA: HUUaBZFjgPdDqgXLgbo4b83TGuJNrapBQsaR8awHpump</p>
 										</header>
 										<p> $PWN is a total throwback to the golden era of '90s gaming — Tony Hawk, Madden, GoldenEye — the games that straight-up ruled our lives. Now we’re bringing that same vibe to Web3, mixing old-school thrills with a modern digital playground. We’re talkin' sick community, dope content, and the chance to develop our own mini retro games. If you know, you know.
@@ -266,7 +266,25 @@
 
 								</div>
 							</section>
+							<section>
 
+								<ul class="console-icons">
+									<li><a href="#" class="icon"><img src="images/ape.png" alt="Did you ape Icon"><span class="label">Ape</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwncartridge.png" alt="Cartridge Icon"><span class="label">Cartridge</span></a></li>
+									<li><a href="#" class="icon"><img src="images/ryu.png" alt="Ryu Icon"><span class="label">Ryu</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwnposter.png" alt="Pwn Icon"><span class="label">PWN Poster</span></a></li>
+									<li><a href="#" class="icon"><img src="images/sf.png" alt="SF Icon"><span class="label">SF</span></a></li>
+									<li><a href="#" class="icon"><img src="images/terminator.png" alt="Terminator Icon"><span class="label">Terminator</span></a></li>
+									<li><a href="#" class="icon"><img src="images/wwf.png" alt="WWF Icon"><span class="label">WWF</span></a></li>
+									<li><a href="#" class="icon"><img src="images/wwf2.png" alt="WWF Icon"><span class="label">WWF2</span></a></li>
+									<li><a href="#" class="icon"><img src="images/ki.png" alt="KI Icon"><span class="label">KI</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwnfriends.png" alt="PWN friends Icon"><span class="label">PWN Friends</span></a></li>
+									<li><a href="#" class="icon"><img src="images/nba.png" alt="NBA Icon"><span class="label">NBA</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwnposter2.png" alt="PWN poster 2 Icon"><span class="label">PWN Poster 2</span></a></li>
+									<li><a href="#" class="icon"><img src="images/eddie.png" alt="Eddy Icon"><span class="label">Eddy</span></a></li>
+
+								</ul>
+							</section>
 							<section>
 								<header class="major">
 									<h2>🕹️ PWN ARCADE</h2>
@@ -288,6 +306,25 @@
 
 									</div>
 								</div>
+							</section>
+							<section>
+
+								<ul class="console-icons">
+									<li><a href="#" class="icon"><img src="images/ape.png" alt="Did you ape Icon"><span class="label">Ape</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwncartridge.png" alt="Cartridge Icon"><span class="label">Cartridge</span></a></li>
+									<li><a href="#" class="icon"><img src="images/ryu.png" alt="Ryu Icon"><span class="label">Ryu</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwnposter.png" alt="Pwn Icon"><span class="label">PWN Poster</span></a></li>
+									<li><a href="#" class="icon"><img src="images/sf.png" alt="SF Icon"><span class="label">SF</span></a></li>
+									<li><a href="#" class="icon"><img src="images/terminator.png" alt="Terminator Icon"><span class="label">Terminator</span></a></li>
+									<li><a href="#" class="icon"><img src="images/wwf.png" alt="WWF Icon"><span class="label">WWF</span></a></li>
+									<li><a href="#" class="icon"><img src="images/wwf2.png" alt="WWF Icon"><span class="label">WWF2</span></a></li>
+									<li><a href="#" class="icon"><img src="images/ki.png" alt="KI Icon"><span class="label">KI</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwnfriends.png" alt="PWN friends Icon"><span class="label">PWN Friends</span></a></li>
+									<li><a href="#" class="icon"><img src="images/nba.png" alt="NBA Icon"><span class="label">NBA</span></a></li>
+									<li><a href="#" class="icon"><img src="images/pwnposter2.png" alt="PWN poster 2 Icon"><span class="label">PWN Poster 2</span></a></li>
+									<li><a href="#" class="icon"><img src="images/eddie.png" alt="Eddy Icon"><span class="label">Eddy</span></a></li>
+
+								</ul>
 							</section>
 							<!-- Section -->
 							<section>
@@ -312,6 +349,26 @@
 
 									</div>
 								</div>
+							</section>
+							<section>
+
+								<ul class="console-icons">
+									<li><a href="#" class="icon"><img src="images/thps_icon.png" alt="Tony Hawk Pro Skater Icon"><span class="label">THPS</span></a></li>
+									<li><a href="#" class="icon"><img src="images/easports_icon.png" alt="Madden Icon"><span class="label">Madden</span></a></li>
+									<li><a href="#" class="icon"><img src="images/madden_icon.jpg" alt="Madden Icon"><span class="label">Madden</span></a></li>
+									<li><a href="#" class="icon"><img src="images/goldeneye_icon.png" alt="Goldeneye Icon"><span class="label">Goldeneye</span></a></li>
+									<li><a href="#" class="icon"><img src="images/md_icon.png" alt="Mountain Dew Icon"><span class="label">Mountain Dew</span></a></li>
+									<li><a href="#" class="icon"><img src="images/hp_icon.png" alt="Hot Pockets Icon"><span class="label">Hot Pockets</span></a></li>
+									<li><a href="#" class="icon"><img src="images/ps1_icon.png" alt="PS1 Icon"><span class="label">PS1</span></a></li>
+									<li><a href="#" class="icon"><img src="images/n64_icon.png" alt="N64 Icon"><span class="label">N64</span></a></li>
+									<li><a href="#" class="icon"><img src="images/sega_icon.png" alt="Sega Icon"><span class="label">Sega</span></a></li>
+									<li><a href="#" class="icon"><img src="images/atari_icon.png" alt="Atari Icon"><span class="label">Atari</span></a></li>
+									<li><a href="#" class="icon"><img src="images/ps2-icon.png" alt="PS2 Icon"><span class="label">PS2</span></a></li>
+									<li><a href="#" class="icon"><img src="images/nintendo_icon.png" alt="Nintendo Icon"><span class="label">Nintendo</span></a></li>
+									<li><a href="#" class="icon"><img src="images/xbox_icon.png" alt="XBox Icon"><span class="label">XBox</span></a></li>
+
+
+								</ul>
 							</section>
 
 						</div>
