--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
 
             <!-- Tabbed Section -->
             <section>
+                <header class="major">
+                    <h2>Welcome to the PWN Zone!</h2>
+                </header>
+                <p>Welcome to the PWN universe! Smash play on PWN TV for a pixel-perfect rewind to when "pwn" ruled—GoldenEye frags and Cap’n Crunch vibes. Power up in the first Web3 Arcade, a neon-soaked shrine of 8-bit mini-games built with Grok 3 (xAI), fueled by $PWN tokens. Then, PWNify your PFP to flex that retro soul. This is our turf—stack high scores, dominate the past, and gear up for more fire dropping soon!
+
+                </p>
                 <ul class="tab-nav">
                     <li><a href="#pwn-tv" class="tab-link button active ">PWN TV</a></li>
                     <li><a href="#pwn-arcade" class="tab-link button ">WEB3 Arcade</a></li>
@@ -140,7 +146,7 @@
                     <header class="major">
                         <h2>PWN TV</h2>
                     </header>
-                    <p>Scroll down, smash that play button, and dive headfirst into the era when "pwn" was king - when you would frag your buddies in GoldenEye til 3 a.m., then wake up to X-Men: The Animated Series with a bowl of Capn Crunch. PWN TV has got the goods: pixelated perfection, cheesy commercials, and those unforgettable feels that only us retro gamer kids can truly get. This is our turf, our throwback kingdom - where every clip is a high score and every vibe is a total domination. Let us PWN the past, fam!</p>
+                    <p>Scroll down, smash that play button, and dive headfirst into the era when PWN was king!</p>
                     <div class="posts">
                         <article>
                             <a class="image"><video width="100%" controls><source src="/images/lastresort_video.mp4" type="video/mp4"></video></a>
@@ -197,7 +203,7 @@
                     <header class="major">
                         <h2>WEB3 ARCADE</h2>
                     </header>
-                    <p>Plug In and PWN! Welcome to the first Web3 Arcade, a neon-charged rewind to the 80s and 90s, powered by $PWN tokens. This ain’t just gaming—it’s a pixel-punching, joystick-jamming shrine to the golden age. Built with Grok 3 (xAI), our mini-games drip with 8-bit soul and arcade grind. Stack $PWN, smash high scores, and flex those retro skills. More fire’s dropping soon—get ready to dominate like it’s 1999!
+                    <p>Plug In and PWN! Welcome to the first Web3 Arcade, a neon-charged rewind to the 80s and 90s, powered by $PWN tokens. Built with Grok 3 (xAI), our mini-games drip with 8-bit soul and arcade grind. Stack $PWN, smash high scores, and flex those boomer skills!
 
                     </p>
                     <div align="center"><img src="images/uc.gif" alt="Under Construction" class="uc-image"></div> </div>
@@ -206,7 +212,9 @@
                     <header class="major">
                         <h2>Join the PWN Community and PWNify your PFP!</h2>
                     </header>
+<p>Transform your profile pic into a retro gaming legend with the PWNifyer—pure 90s domination, one pixel at a time!
 
+</p>
                     <div align="center"><img src="images/uc.gif" alt="Under Construction" class="uc-image"></div></div>
             </section>
 
