--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 </head>
 
 <body>
+<audio autoplay loop>
+    <source src="images/bg-music.mid" type="audio/midi">
+    Your browser doesn’t support MIDI audio—time to upgrade, bro!
+</audio>
 <div class="moving-background"></div>
 <!-- Wrapper -->
 <div id="wrapper">
