--- a/index.html
+++ b/index.html
@@ -269,11 +269,12 @@
                         <div class="col-3"><span class="image fit"><img src="images/MetalSlug.gif" alt="" /></span></div>
                         <div class="col-3"><span class="image fit"><img src="images/FIFA%2098.gif" alt="" /></span></div>
                         <!-- Break -->
-                        <div class="col-3"><span class="image fit"><img src="images/Street%20Fighter.gif" alt="" /></span></div>
+                        <div class="col-3"><span class="image fit"><img src="images/sonya.gif" alt="" /></span></div>
                         <div class="col-3"><span class="image fit"><img src="images/Goldeneye.gif" alt="" /></span></div>
                         <div class="col-3"><span class="image fit"><img src="images/AOE.gif" alt="" /></span></div>
                         <div class="col-3"><span class="image fit"><img src="images/Sly.gif" alt="" /></span></div>
                     </div>
+                </div>
 
             </section>
 
