--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
 
             </section>
 
+            <section>
+                <div class="disclaimer">
+                    This website is 100% fan-crafted and has no ties to the deployer of $PWN cryptocurrency on the Solana blockchain. $PWN has zero affiliation with "PWN" gaming slang origins or any brands parodied here. $PWN is a crypto asset with no inherent value or promise of financial gain. These retro-fueled TonyHawkMaddenGoldenEye coins are strictly for entertainment—pwn at your own risk, fam!
+                </div>
+            </section>
+
 
             <!-- Everything after tabs -->
 
