--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
                     <ul class="actions">
                         <li><a target="_blank" href="https://jup.ag/swap/SOL-HUUaBZFjgPdDqgXLgbo4b83TGuJNrapBQsaR8awHpump" class="button  large">Buy $PWN</a></li>
                         <li><a href="https://www.hitwebcounter.com" target="_blank">
-                            <h3>Visitors:</h3><img src="https://hitwebcounter.com/counter/counter.php?page=19642314&style=0001&nbdigits=5&type=page&initCount=0" title="Counter Widget" alt="Visit counter For Websites" border="0" /></a>
+                            <h3>Visitors:</h3> <img src="https://hitwebcounter.com/counter/counter.php?page=19695125&style=0001&nbdigits=7&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites"   border="0" /></a>
                         </li>
-
-                    </ul>
+                         </ul>
 
                 </div>
                 <span class="image object">
